# nwave-chess

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/data/: mod.rs  schema.rs  weights.rs
backend/src/engine/: board.rs  eval.rs  mod.rs  movegen.rs  search.rs  tt.rs  types.rs
backend/src/learning/: collector.rs  mod.rs  optimizer.rs  self_play.rs  td_leaf.rs  weights.rs
backend/src/server/: mod.rs  protocol.rs  session.rs  ws.rs
docs/design/: architecture-design.md
docs/feature/self-learning-chess/: roadmap.yaml
docs/research/ai-ml/: human-play-learning-strategy-research.md  self-learning-chess-comprehensive-research.md
docs/research/ui/: chess-svg-pieces-research.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/chess/: board.ts
frontend/src/lib/components/: ChessBoard.svelte  ColorSelectionScreen.svelte  ConnectionStatus.svelte  GameControls.svelte  GameScreen.svelte  GameStatusBar.svelte  LearningDashboard.svelte  MoveList.svelte  SearchPanel.svelte  SelfPlayScreen.svelte
frontend/src/lib/state/: connection.svelte.ts  game.svelte.ts  learning.svelte.ts  search.svelte.ts
frontend/src/lib/ws/: client.ts  protocol.ts
